# pullread

./: .env.example  .gitignore  .mcp.json  ISSUES.md  LICENSE  PLAN-updates-and-onboarding.md  README.md  RELEASING.md  TAURI_MIGRATION_ASSESSMENT.md  THIRD_PARTY_NOTICES  babel.config.js  bunfig.toml  email-header-b64.txt  feeds.json.example  human-needed.md  jest.config.js  models.json  package-lock.json  package.json  playwright.config.ts  viewer.css  viewer.html  viewer.js
.pongogo/: .gitignore  config.yaml
Licenses/: THIRD-PARTY-NOTICES.md
PullReadTray/: cli-entitlements.plist
ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh  ci_pre_xcodebuild.sh
docs/: code-signing.md  content-flow.mmd  defuddle.md  first-launch-flow.d2  kokoro-tts-bun-fix.md  notebook-feature.md  playback-architecture.d2  processing-flow.d2  prototype.html  viewer-architecture.md
scripts/: PullReadScheduler.applescript  build-release.sh  build-tauri.sh  bump-version.ts  bundle-kokoro.ts  check-models.ts  com.pullread.sync.plist  com.shellen.pullread.plist  create-app-icon.py  create-og-image.py  download-kokoro-model.sh  embed-viewer.ts  fetch-gutenberg.ts  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.pongogo/: pongogo.db
src-tauri/.pongogo/logs/: posttooluse-compliance.jsonl  stop-response-capture.jsonl
src-tauri/capabilities/: default.json  login.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  email.rs  lib.rs  main.rs  notifications.rs  sidecar.rs  timers.rs  tray.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+237 files in other folders)
